[gd_scene load_steps=32 format=2]

[ext_resource path="res://Assets/Field_Full.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Objects/Ball.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Game_Camera2D.gd" type="Script" id=3]
[ext_resource path="res://Assets/Road.png" type="Texture" id=4]
[ext_resource path="res://Assets/Player 1-Sheet-Sheet.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Game.gd" type="Script" id=6]
[ext_resource path="res://Assets/audience_member-Sheet.png" type="Texture" id=7]
[ext_resource path="res://Assets/stadium_bounds.png" type="Texture" id=8]
[ext_resource path="res://Scenes/Objects/Car.tscn" type="PackedScene" id=9]
[ext_resource path="res://Assets/PublicPixel-rv0pA.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://Scenes/Objects/Speed_Buff.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scenes/Objects/Explosion_vfx.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scenes/Objects/Super_Speed_Up.tscn" type="PackedScene" id=13]
[ext_resource path="res://Scenes/Objects/Grease.tscn" type="PackedScene" id=14]
[ext_resource path="res://Scenes/Objects/Car_Moving.tscn" type="PackedScene" id=15]
[ext_resource path="res://Assets/Back Button.png" type="Texture" id=16]
[ext_resource path="res://Assets/Restart Button.png" type="Texture" id=17]
[ext_resource path="res://Scripts/Button_Behavior.gd" type="Script" id=18]
[ext_resource path="res://Assets/Leaderboard.png" type="Texture" id=19]

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 5 )
region = Rect2( 16, 0, 16, 32 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 7 ), SubResource( 8 ) ],
"loop": false,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 16, 24 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 7 )
region = Rect2( 16, 0, 16, 24 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 10 )

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="DynamicFont" id=12]
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=13]
font_data = ExtResource( 10 )

[node name="Game" type="Node2D"]
position = Vector2( 40, 0 )
script = ExtResource( 6 )
Car = ExtResource( 9 )
CarMoving = ExtResource( 15 )
SpeedBuff = ExtResource( 11 )
SuperSpeedBuff = ExtResource( 13 )
Explosion_vfx = ExtResource( 12 )
Grease = ExtResource( 14 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 480, 0 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="ColorRect" type="ColorRect" parent="ParallaxBackground/ParallaxLayer"]
margin_top = -96.0
margin_right = 480.0
margin_bottom = 416.0
color = Color( 0, 0, 0, 1 )

[node name="FieldBlank" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 240, 160 )
texture = ExtResource( 4 )

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = -344.0
margin_top = -96.0
margin_right = 712.0
margin_bottom = 416.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Field" type="Sprite" parent="."]
position = Vector2( 200, 160 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Player" type="AnimatedSprite" parent="."]
position = Vector2( 176, 136 )
frames = SubResource( 9 )
centered = false

[node name="Ball" parent="." instance=ExtResource( 2 )]
position = Vector2( 192, 152 )

[node name="StadiumBounds" type="Sprite" parent="."]
position = Vector2( 200, 160 )
texture = ExtResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="Audience" type="Node2D" parent="."]
rotation = 0.00974834
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Audience"]
position = Vector2( -19, -36 )
frames = SubResource( 3 )
frame = 1
playing = true

[node name="AnimatedSprite2" type="AnimatedSprite" parent="Audience"]
position = Vector2( 40, -58.9903 )
frames = SubResource( 3 )
playing = true

[node name="AnimatedSprite3" type="AnimatedSprite" parent="Audience"]
position = Vector2( 81, -36 )
frames = SubResource( 3 )
playing = true

[node name="AnimatedSprite4" type="AnimatedSprite" parent="Audience"]
position = Vector2( 161, -36 )
frames = SubResource( 3 )
playing = true

[node name="AnimatedSprite5" type="AnimatedSprite" parent="Audience"]
position = Vector2( 220, -58.9903 )
frames = SubResource( 3 )
playing = true

[node name="AnimatedSprite6" type="AnimatedSprite" parent="Audience"]
position = Vector2( 261, -36 )
frames = SubResource( 3 )
frame = 1
playing = true

[node name="EntityContainer" type="Node2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 200, 160 )
current = true
script = ExtResource( 3 )

[node name="Label" type="Label" parent="Camera2D"]
margin_left = -224.0
margin_top = -157.0
margin_right = -96.0
margin_bottom = -141.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "SCORE : "

[node name="GameOverScreen" type="ColorRect" parent="Camera2D"]
margin_left = -88.0
margin_top = -96.0
margin_right = 88.0
margin_bottom = 96.0

[node name="Control2" type="ColorRect" parent="Camera2D/GameOverScreen"]
margin_left = 1.0
margin_top = 1.0
margin_right = 175.0
margin_bottom = 191.0
color = Color( 0, 0, 0, 1 )

[node name="Control3" type="ColorRect" parent="Camera2D/GameOverScreen"]
margin_left = 8.0
margin_top = 7.0
margin_right = 168.0
margin_bottom = 96.0

[node name="Control4" type="ColorRect" parent="Camera2D/GameOverScreen"]
margin_left = 9.0
margin_top = 8.0
margin_right = 167.0
margin_bottom = 95.0
color = Color( 0, 0, 0, 1 )

[node name="Label2" type="Label" parent="Camera2D/GameOverScreen"]
margin_left = 8.0
margin_top = 10.0
margin_right = 168.0
margin_bottom = 83.0
custom_fonts/font = SubResource( 6 )
text = "GAME OVER
Your Score is: "
align = 1
autowrap = true

[node name="Label3" type="Label" parent="Camera2D/GameOverScreen"]
margin_left = 8.0
margin_top = 74.0
margin_right = 168.0
margin_bottom = 147.0
custom_fonts/font = SubResource( 6 )
text = "0"
align = 1
autowrap = true

[node name="Back" type="Button" parent="Camera2D/GameOverScreen"]
margin_left = 8.0
margin_top = 128.0
margin_right = 68.0
margin_bottom = 166.0
custom_styles/focus = SubResource( 10 )
icon = ExtResource( 16 )
flat = true
script = ExtResource( 18 )

[node name="Retry" type="Button" parent="Camera2D/GameOverScreen"]
margin_left = 72.0
margin_top = 128.0
margin_right = 116.0
margin_bottom = 166.0
custom_styles/focus = SubResource( 10 )
icon = ExtResource( 17 )
flat = true
script = ExtResource( 18 )

[node name="Leaderboard" type="Button" parent="Camera2D/GameOverScreen"]
margin_left = 120.0
margin_top = 128.0
margin_right = 164.0
margin_bottom = 166.0
custom_styles/focus = SubResource( 10 )
icon = ExtResource( 19 )
flat = true
script = ExtResource( 18 )

[node name="Leaderboard" type="ColorRect" parent="Camera2D"]
margin_left = -88.0
margin_top = -96.0
margin_right = 88.0
margin_bottom = 96.0

[node name="Control2" type="ColorRect" parent="Camera2D/Leaderboard"]
margin_left = 1.0
margin_top = 1.0
margin_right = 175.0
margin_bottom = 191.0
color = Color( 0, 0, 0, 1 )

[node name="Control3" type="ColorRect" parent="Camera2D/Leaderboard"]
margin_left = 8.0
margin_top = 7.0
margin_right = 168.0
margin_bottom = 96.0

[node name="Control4" type="ColorRect" parent="Camera2D/Leaderboard"]
margin_left = 9.0
margin_top = 8.0
margin_right = 167.0
margin_bottom = 95.0
color = Color( 0, 0, 0, 1 )

[node name="Leaderboard" type="Label" parent="Camera2D/Leaderboard"]
margin_left = 8.0
margin_top = 10.0
margin_right = 168.0
margin_bottom = 83.0
custom_fonts/font = SubResource( 6 )
text = "Enter your name
"
align = 1
autowrap = true

[node name="Leaderboard2" type="LineEdit" parent="Camera2D/Leaderboard"]
margin_left = -12.0
margin_top = 80.0
margin_right = 190.0
margin_bottom = 128.0
custom_fonts/font = SubResource( 6 )
custom_styles/focus = SubResource( 11 )

[node name="Confirm Button" type="Button" parent="Camera2D/Leaderboard"]
margin_left = 34.0
margin_top = 144.0
margin_right = 142.0
margin_bottom = 166.0
custom_fonts/font = SubResource( 12 )
text = "Accept"
flat = true
script = ExtResource( 18 )

[node name="ScoreTimer" type="Timer" parent="."]

[node name="EntityTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="SlowdownTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="FireballTimer" type="Timer" parent="."]
wait_time = 10.0

[node name="Label" type="Label" parent="."]
margin_left = 40.0
margin_top = 272.0
margin_right = 360.0
margin_bottom = 288.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 13 )
text = "Press Space to Start"

[connection signal="button_down" from="Camera2D/GameOverScreen/Back" to="Camera2D/GameOverScreen/Back" method="_on_button_down"]
[connection signal="button_up" from="Camera2D/GameOverScreen/Back" to="Camera2D/GameOverScreen/Back" method="_on_button_up"]
[connection signal="pressed" from="Camera2D/GameOverScreen/Back" to="." method="_on_Back_pressed"]
[connection signal="button_down" from="Camera2D/GameOverScreen/Retry" to="Camera2D/GameOverScreen/Retry" method="_on_button_down"]
[connection signal="button_up" from="Camera2D/GameOverScreen/Retry" to="Camera2D/GameOverScreen/Retry" method="_on_button_up"]
[connection signal="pressed" from="Camera2D/GameOverScreen/Retry" to="." method="_on_Retry_pressed"]
[connection signal="button_down" from="Camera2D/GameOverScreen/Leaderboard" to="Camera2D/GameOverScreen/Leaderboard" method="_on_button_down"]
[connection signal="button_up" from="Camera2D/GameOverScreen/Leaderboard" to="Camera2D/GameOverScreen/Leaderboard" method="_on_button_up"]
[connection signal="pressed" from="Camera2D/GameOverScreen/Leaderboard" to="." method="_on_Leaderboard_pressed"]
[connection signal="button_down" from="Camera2D/Leaderboard/Confirm Button" to="Camera2D/Leaderboard/Confirm Button" method="_on_button_down"]
[connection signal="button_up" from="Camera2D/Leaderboard/Confirm Button" to="Camera2D/Leaderboard/Confirm Button" method="_on_button_up"]
[connection signal="pressed" from="Camera2D/Leaderboard/Confirm Button" to="." method="_on_Confirm_Button_pressed"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="EntityTimer" to="." method="_on_EntityTimer_timeout"]
[connection signal="timeout" from="SlowdownTimer" to="." method="_on_SlowdownTimer_timeout"]
[connection signal="timeout" from="FireballTimer" to="." method="_on_FireballTimer_timeout"]
